snippets/Nemerle.Statechart/Tests/testsuite/positive/join_transition_alternative.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition alternative";
  
  state A
  {
    a => B;
  }

  join j1 => A;
  
  region B
  {
    state C
    {
      a => E;
    }
    
    state E
    {
      a => j1;
    }
    
  } and
  {
    
    state D
    {
      a => j1;
    }
    
  }
  
  #>)]
  public class example
  {
  }

  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("a", "C|D", ["A"], ["B", "C", "D"]);
      tester.Test("a", "E|D", ["C"], ["E"]);
      tester.Test("a", ["D", "E", "B"], ["A"]);
      fsm.Terminate();      
    }
  }
  
 /*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryC
EntryD
[C|D]
Ok
Processing a 'a' 
ExitC
EntryE
[E|D]
Ok
Processing a 'a' 
ExitD
ExitE
ExitB
EntryA
[A]
Ok
END-OUTPUT
*/
