snippets/Nemerle.Statechart/Tests/testsuite/negative/join_must_leave_distinct_regions.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition must leave distinct regions";
  
  state A
  {
    a => B;
    b => j1;
  }

  join j1 => A; // E: Transitions targeting join "Joinj1" must leave states in distinct sub regions of same orthogonal region
  
  region B
  {
    @(E, F): a => A; // E: Transitions targeting join "JoinE_FToA" must leave states in distinct sub regions of same orthogonal region
    
    state E
    {
    }
    
    state F
    {
    }
    
  } and
  {
    
    state D
    {
      b => j1;
    }
    
  }
  
  #>)]
  public class example
  {
  }

  
